update package name and urls

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@react-native-cookies/cookies",
+  "name": "@divvi/cookies",
   "version": "6.2.1",
   "description": "Cookie Manager for React Native",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-native-cookies/cookies.git",
-    "baseUrl": "https://github.com/react-native-cookies/cookies"
+    "url": "git+https://github.com/divvixyz/cookies.git",
+    "baseUrl": "https://github.com/divvixyz/cookies"
   },
   "keywords": [
     "react native",
@@ -31,7 +31,7 @@
   "bugs": {
     "url": "https://github.com/react-native-cookies/cookies/issues"
   },
-  "homepage": "https://github.com/react-native-cookies/cookies#readme",
+  "homepage": "https://github.com/divvixyz/cookies#readme",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
